[package]
name = "service_uptime"
version = "0.6.1"
edition = "2021"
authors = ["darryl.west@raincitysoftware.com"]
rust-version = "1.70"
description = "A small utility that tracks the uptime for web or backend services, worker/actors, and long runnign tasks."
keywords = ["service stats", "web server", "task uptime" ]
license = "MIT OR Apach-2.0"
readme = "README.md"
homepage = "https://github.com/darrylwest/service-uptime"
repository = "https://github.com/darrylwest/service-uptime"
exclude = [ ".github/*" ]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
